<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- Global -->
    <string name="app_name">RUM App</string>
    <string name="company_name">Rete Universitaria Mediterranea</string>

    <!-- Activities & drawer -->
    <string name="title_news">Notizie</string>
    <string name="title_reader">@string/app_name</string>
    <string name="title_categories">Categorie</string>
    <string name="title_about">Info &amp; contatti</string>
    <string name="title_places">Dove studiare</string>
    <string name="title_help">Domande frequenti</string>
    <string name="title_info">Informazioni</string>

    <!-- Menus -->
    <string name="string_settings">Impostazioni</string>
    <string name="image_icon">Icona</string>
    <string name="loading">Caricamento…</string>
    <string name="read_external">Leggi online</string>
    <string name="read_share">Condividi</string>

    <!-- App data keys -->
    <string name="key_news_list">com.liggiorgio.rumapp.KEY_NEWS_LIST</string>
    <string name="key_scroll_height">com.liggiorgio.rumapp.KEY_SCROLL_HEIGHT</string>

    <!-- App text contents -->
    <string name="about_title1">Cos\'è RUM?</string>
    <string name="about_text1">
        La R.U.M. nasce dalla volontà di un gruppo di studenti e giovani laureati che, preso atto delle eterogenee realtà
        territoriali, hanno voluto creare una rete di coordinamento capace di sintetizzare mille voci in una sola, forte
        voce.\n\nRUM è rappresentanza, RUM è impegno, RUM è Famiglia.
    </string>
    <string name="about_title2">La nostra missione</string>
    <string name="about_text2">
        RUM si prefigge tre grandi obiettivi:\n\n
        &#8226; RIFORMA DELLA GOVERNANCE UNIVERSITARIA\n
        &#8226; MAGGIORE ATTENZIONE AI POLI DECENTRATI\n
        &#8226; LA BUONA RAPPRESENTANZA
    </string>
    <string name="about_title3">Contattaci</string>
    <string name="about_text3">Vieni a trovarci, contattaci attraverso i nostri recapiti oppure sui nostri profili
        social!
    </string>
    <string name="about_phone">+39 320 805 8457</string>
    <string name="about_email">reteuniversitariamediterranea@gmail.com</string>
    <string name="about_address">Viale delle Scienze, 90128 Palermo (PA)</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">YouTube</string>
    <string name="mail_subject">Email tramite RUM App</string>
    <string name="about_location_query">Auletta R.U.M. Associazione studentesca, Palermo, PA</string>
    <string name="facebook_id">rete.universitaria.mediterranea</string>
    <string name="facebook_url">https://www.facebook.com/rete.universitaria.mediterranea</string>
    <string name="twitter_id">128848765</string>
    <string name="twitter_url">http://twitter.com/rum_unipa</string>
    <string name="instagram_id">rumunipa</string>
    <string name="instagram_url">http://instagram.com/rumunipa</string>
    <string name="youtube_url">rumuniversita</string>
    <string name="mail_content">Cari ragazzi di RUM,\n\nVi contatto per chiedervi…</string>

</resources>
