<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:scrollbarSize="5dp"
            android:scrollbarThumbVertical="@android:color/darker_gray" android:background="@color/colorForeground">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:orientation="vertical" android:id="@+id/about_container">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="192dp" app:srcCompat="@mipmap/rum_about"
                android:scaleType="centerCrop"
                android:id="@+id/about_cover" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/about_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="20sp"
                android:textColor="@color/colorPrimary" android:textStyle="bold"
                android:id="@+id/about_title1"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"/>
        <TextView
                android:text="@string/about_text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" android:textSize="15sp"
                android:id="@+id/about_text1"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/about_title1" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp" android:layout_marginRight="10dp"/>
        <TextView
                android:text="@string/about_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="20sp"
                android:textColor="@color/colorPrimary" android:textStyle="bold"
                android:id="@+id/about_title2"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/imageView6"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"/>
        <TextView
                android:text="@string/about_text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" android:textSize="15sp"
                android:id="@+id/about_text2"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/about_title2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp" android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>
        <TextView
                android:text="@string/about_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="20sp"
                android:textColor="@color/colorPrimary" android:textStyle="bold"
                android:id="@+id/about_title3"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/imageView7"
                app:layout_constraintBottom_toBottomOf="@+id/imageView7"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" android:textSize="15sp"
                android:text="@string/about_text3"
                android:id="@+id/about_text3"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp" android:layout_marginRight="10dp" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/about_title3"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_about_phone"
                android:id="@+id/button_image1" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="22dp" android:layout_marginStart="22dp"
                app:layout_constraintTop_toTopOf="@+id/button_call"
                app:layout_constraintBottom_toBottomOf="@+id/button_call"/>
        <Button
                android:text="@string/about_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_call"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textSize="15sp" android:textAllCaps="false" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/about_text3"
                app:layout_constraintStart_toEndOf="@+id/button_image1"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:srcCompat="@drawable/line_divider"
                android:scaleType="fitXY"
                android:id="@+id/imageView11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginLeft="10dp" android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" android:layout_marginRight="10dp"
                app:layout_constraintTop_toBottomOf="@+id/button_call"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_about_email"
                android:id="@+id/button_image2"
                app:layout_constraintTop_toTopOf="@+id/button_mail" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="22dp" android:layout_marginStart="22dp"
                app:layout_constraintBottom_toBottomOf="@+id/button_mail"/>
        <Button
                android:text="@string/about_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_mail"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textSize="15sp" app:layout_constraintTop_toBottomOf="@+id/imageView11"
                android:textAllCaps="false" app:layout_constraintStart_toEndOf="@+id/button_image2"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:srcCompat="@drawable/line_divider"
                android:scaleType="fitXY"
                android:id="@+id/imageView12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginLeft="10dp" android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" android:layout_marginRight="10dp"
                app:layout_constraintTop_toBottomOf="@+id/button_mail"/>
        <Button
                android:text="@string/about_address"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:id="@+id/button_map"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/imageView12" android:textAllCaps="false"
                app:layout_constraintStart_toEndOf="@+id/button_image3"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_about_address"
                android:id="@+id/button_image3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="22dp" android:layout_marginStart="22dp"
                app:layout_constraintTop_toTopOf="@+id/button_map"
                app:layout_constraintBottom_toBottomOf="@+id/button_map"/>
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/button_facebook"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button_map" app:srcCompat="@drawable/ic_about_facebook"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button_twitter"
        />
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/button_twitter"
                app:srcCompat="@drawable/ic_about_twitter"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                app:layout_constraintStart_toEndOf="@+id/button_facebook"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/button_facebook" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/button_instagram"/>
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/button_instagram"
                app:srcCompat="@drawable/ic_about_instagram"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                app:layout_constraintStart_toEndOf="@+id/button_twitter"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/button_facebook" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/button_youtube"/>
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/button_youtube"
                app:srcCompat="@drawable/ic_about_youtube"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/button_instagram" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/button_facebook"
                app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:text="@string/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="10sp"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toTopOf="@+id/button_facebook"
                android:layout_marginTop="58dp"
                app:layout_constraintStart_toStartOf="@+id/button_facebook"
                app:layout_constraintEnd_toEndOf="@+id/button_facebook"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="40dp"
                android:paddingBottom="4dp"/>
        <TextView
                android:text="@string/instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textSize="10sp"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="40dp"
                app:layout_constraintStart_toStartOf="@+id/button_instagram"
                app:layout_constraintEnd_toEndOf="@+id/button_instagram"
                app:layout_constraintTop_toTopOf="@+id/button_instagram" android:layout_marginTop="58dp"
                android:paddingBottom="4dp"/>
        <TextView
                android:text="@string/youtube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="10sp"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="40dp"
                app:layout_constraintTop_toTopOf="@+id/button_youtube"
                android:layout_marginTop="58dp" app:layout_constraintStart_toStartOf="@+id/button_youtube"
                app:layout_constraintEnd_toEndOf="@+id/button_youtube" android:paddingBottom="4dp"/>
        <TextView
                android:text="@string/twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textSize="10sp"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="40dp"
                app:layout_constraintStart_toStartOf="@+id/button_twitter"
                app:layout_constraintEnd_toEndOf="@+id/button_twitter"
                app:layout_constraintTop_toTopOf="@+id/button_twitter" android:layout_marginTop="58dp"
                android:paddingBottom="4dp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_about_star"
                android:id="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/about_cover"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_about_compass"
                android:id="@+id/imageView6" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/about_text1"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_about_contact"
                android:id="@+id/imageView7" app:layout_constraintTop_toBottomOf="@+id/about_text2"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp" android:layout_marginLeft="10dp"/>
    </android.support.constraint.ConstraintLayout>

</ScrollView>